--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="keywords" content="" />
-        <meta name="description" content="" />
-        <title></title>
-    </head>
-    <body>
-     <script src="./build/main.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <title></title>
+  </head>
+  <body>
+    <script src="./dist/main.js"></script>
+    <div class="outer">outer</div>
+  </body>
 </html>
