--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <title></title>
   </head>
   <body>
-    <script src="./dist/main.js"></script>
     <div class="outer">outer</div>
+    <p>这个p真难放啊</p>
+    <img src="./images/logo.png" alt="">
   </body>
 </html>
